Fix height > 100vh

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -20,7 +20,7 @@
 body {
   display: grid;
   place-items: center;
-  height: 100vw;
+  height: 100vh;
 
   // defaults
   font-family: "Inter", sans-serif;
