--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -17,6 +17,7 @@
   --clr-neutral-100: #a9b1d6;
   --clr-accent-100: #9ece6a;
   --clr-accent-200: #73daca;
+  --transition: all 0.3s ease-in-out;
 }
 
 body {
@@ -55,17 +56,46 @@ button {
   padding: 0.25rem 0.5rem;
 
   border-radius: 0.25rem;
-  background: none;
   color: var(--clr-neutral-100);
 
   outline: none;
   border: 2px solid var(--clr-neutral-200);
 }
 
+input {
+  background: none;
+  width: 12ch;
+}
+
 button {
+  padding: 0.4rem 0.75rem;
+  background: var(--clr-neutral-200);
+  color: var(--clr-neutral-800);
   font-weight: bold;
   text-transform: uppercase;
   font-size: 0.85rem;
+  transition: var(--transition);
+
+  &.error:after {
+    content: "Unable to locate zip code.";
+    text-transform: none;
+    font-weight: 400;
+    position: absolute;
+    top: 100px;
+    right: 50%;
+    transform: translate(50%, -50%);
+    width: 20ch;
+    border-radius: 0.25rem;
+    border: 2px solid var(--clr-accent-100);
+    color: var(--clr-accent-100);
+    background: var(--clr-neutral-800);
+    padding: 0.5rem;
+  }
+
+  &:hover {
+    color: var(--clr-neutral-200);
+    background: var(--clr-neutral-800);
+  }
 }
 
 .weather-container {
