--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -23,13 +23,12 @@
 
 body {
   display: grid;
-  grid-template-rows: min-content 1fr min-content;
-  grid-template-columns: 100vw;
   place-items: center;
+  grid-template-rows: min-content 1fr min-content;
   height: 100vh;
   width: 100vw;
 
-  // defaults
+  // page defaults
   font-family: "Inter", sans-serif;
   background: var(--clr-neutral-900);
   color: var(--clr-neutral-100);
@@ -44,8 +43,8 @@ header {
 header,
 footer {
   width: 100vw;
-  background-color: var(--clr-neutral-800);
   padding-block: 1rem;
+  background-color: var(--clr-neutral-800);
 }
 
 .page-title {
@@ -56,9 +55,9 @@ footer {
 
 form {
   display: flex;
-  gap: 1rem;
   align-items: center;
   justify-content: center;
+  gap: 1rem;
 }
 
 input,
@@ -69,10 +68,10 @@ button {
   padding: 0.25rem 0.5rem;
 
   border-radius: var(--border-radius);
-  color: var(--clr-neutral-100);
-
-  outline: none;
   border: 2px solid var(--clr-neutral-200);
+  outline: none;
+
+  color: var(--clr-neutral-100);
 }
 
 input {
@@ -82,27 +81,32 @@ input {
 
 button {
   padding: 0.4rem 0.75rem;
-  background: var(--clr-neutral-200);
   color: var(--clr-neutral-800);
+  background: var(--clr-neutral-200);
+  font-size: 0.85rem;
   font-weight: bold;
   text-transform: uppercase;
-  font-size: 0.85rem;
   transition: var(--transition);
 
   &.error:after {
     content: "Unable to locate zip code.";
-    text-transform: none;
-    font-weight: 400;
+
     position: absolute;
     top: 100px;
     right: 50%;
     transform: translate(50%, -50%);
+
     width: 20ch;
+    padding: 0.5rem;
+
+    text-transform: none;
+    font-weight: 400;
+
     border-radius: var(--border-radius);
     border: 2px solid var(--clr-accent-100);
+
     color: var(--clr-accent-100);
     background: var(--clr-neutral-800);
-    padding: 0.5rem;
   }
 
   &:hover {
@@ -113,9 +117,8 @@ button {
 
 .weather-container {
   position: relative;
-
-  padding: 1rem;
   display: flex;
+  padding: 1rem;
 
   > * {
     padding-inline: 1rem;
@@ -126,32 +129,34 @@ button {
   position: absolute;
   top: -40px;
   left: -30px;
-  background: var(--clr-neutral-900);
+
   border-radius: 50%;
+  background: var(--clr-neutral-900);
 }
 
 .location {
-  color: var(--clr-accent-200);
   font-size: 1.5rem;
   text-transform: uppercase;
+
+  color: var(--clr-accent-200);
 }
 
 .temp-current {
+  padding: 0.25rem 1rem 0.25rem 1.75rem;
+
+  font-size: 7rem;
+
   background: var(--clr-accent-200);
   color: var(--clr-neutral-800);
-  padding: 0.25rem 1rem 0.25rem 1.75rem;
+
   border-radius: var(--border-radius);
-  font-size: 7rem;
 }
 
 .description {
-  color: var(--clr-neutral-200);
   font-size: 2rem;
+  color: var(--clr-neutral-200);
 }
 
 .humidity {
   margin-top: 1rem;
-}
-
-.temp-min {
 }
